--- a/main/res/layout/fragment_my_account.xml
+++ b/main/res/layout/fragment_my_account.xml
@@ -6,7 +6,7 @@
     android:background="@color/background"
     tools:context=".MyAccountFragment">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background"
@@ -38,5 +38,5 @@
                 />
 
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </FrameLayout>
