--- a/main/res/layout/activity_forget_password.xml
+++ b/main/res/layout/activity_forget_password.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@mipmap/inout_logo09999999"
+    android:background="@mipmap/inout_logo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -25,7 +25,7 @@
         android:id="@+id/reset_textInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="272dp"
-        android:layout_height="41dp"
+        android:layout_height="54dp"
         app:layout_constraintBottom_toBottomOf="@+id/reset_img2"
         app:layout_constraintEnd_toEndOf="@+id/reset_img2"
         app:layout_constraintHorizontal_bias="0.516"
@@ -45,6 +45,7 @@
         android:id="@+id/imageView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:contentDescription="@string/title"
         app:layout_constraintBottom_toBottomOf="@+id/reset_img2"
         app:layout_constraintEnd_toEndOf="@+id/reset_textInputLayout"
@@ -108,6 +109,7 @@
         android:id="@+id/reset_imageView14"
         android:layout_width="189dp"
         android:layout_height="25dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/reset_img2"
         app:layout_constraintEnd_toEndOf="@+id/reset_textInputLayout"
         app:layout_constraintHorizontal_bias="0.493"
@@ -120,6 +122,7 @@
         android:id="@+id/reset_textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:fontFamily="@font/baumans"
         android:text="@string/loginnow"
         android:textColor="@color/nin"
@@ -129,7 +132,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/reset_textInputLayout"
         app:layout_constraintTop_toBottomOf="@+id/reset_imageView14"
-        app:layout_constraintVertical_bias="0.715" />
+        app:layout_constraintVertical_bias="0.65" />
 
     <TextView
         android:id="@+id/textView11"
@@ -150,10 +153,11 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/baumans"
         android:text="@string/re"
         android:textColor="@color/background"
         android:textSize="@dimen/font_11"
-        android:fontFamily="@font/baumans"
         app:layout_constraintBottom_toBottomOf="@+id/reset_imageView14"
         app:layout_constraintEnd_toEndOf="@+id/reset_imageView14"
         app:layout_constraintHorizontal_bias="0.507"
