--- a/main/res/layout/activity_sign_in.xml
+++ b/main/res/layout/activity_sign_in.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@mipmap/inout_logo8"
+    android:background="@mipmap/inout_logo09"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SignIn">
@@ -26,9 +26,10 @@
         android:id="@+id/quantity_number"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="272dp"
-        android:layout_height="41dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
         android:transitionName="@string/Email"
-        android:layout_marginStart="3dp"
         app:layout_constraintBottom_toBottomOf="@+id/signin_field"
         app:layout_constraintEnd_toEndOf="@+id/signin_field"
         app:layout_constraintHorizontal_bias="0.454"
@@ -40,9 +41,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/font_14"
             android:inputType="text"
-             />
+            android:textSize="@dimen/font_14" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -50,9 +50,10 @@
         android:id="@+id/sign_in_user_field_2"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="272dp"
-        android:layout_height="41dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
         android:transitionName="@string/Password"
-        android:layout_marginStart="3dp"
         app:layout_constraintBottom_toBottomOf="@+id/signin_field"
         app:layout_constraintEnd_toEndOf="@+id/signin_field"
         app:layout_constraintHorizontal_bias="0.454"
@@ -65,9 +66,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/font_14"
             android:inputType="textPassword"
-             />
+            android:textSize="@dimen/font_14" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -123,12 +123,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.024"
-        app:srcCompat="@drawable/abc_vector_test" />
+        app:srcCompat="@drawable/ic_arrow_back_24px" />
 
     <TextView
         android:id="@+id/signin_forget"
         android:layout_width="79dp"
         android:layout_height="13dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="@font/baumans"
         android:text="@string/forget"
         android:textColor="@color/colorPrimary"
@@ -161,7 +162,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="81dp"
         android:layout_height="16dp"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:indeterminate="true"
         app:layout_constraintBottom_toTopOf="@+id/signin_btn_img"
         app:layout_constraintEnd_toEndOf="@+id/signin_btn_img"
@@ -263,7 +264,7 @@
         app:layout_constraintStart_toEndOf="@+id/signin_back"
         app:layout_constraintTop_toTopOf="@+id/signin_back"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+        app:srcCompat="@mipmap/baseline_clear_black_24" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
