--- a/main/res/layout/cart_item_layout.xml
+++ b/main/res/layout/cart_item_layout.xml
@@ -21,14 +21,16 @@
 
     <TextView
         android:id="@+id/product_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Huawei P30 (WHITE)"
-        android:textSize="@dimen/size16sp"
-        android:textColor="@color/black"
+        android:layout_marginEnd="16dp"
         android:fontFamily="@font/baumans"
+        android:text="Huawei P30 (WHITE)"
+        android:textColor="@color/black"
+        android:textSize="@dimen/size16sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/product_image"
         app:layout_constraintTop_toTopOf="parent" />
 
