--- a/main/res/layout/category_item.xml
+++ b/main/res/layout/category_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/category_item"
-    android:layout_width="80dp"
+    android:layout_width="90dp"
     android:layout_height="@dimen/dim60dp">
 
     <ImageView
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="2dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/category_name"
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@mipmap/home_logo" />
+        app:srcCompat="@mipmap/placeholder_small" />
 
     <TextView
         android:id="@+id/category_name"
@@ -27,11 +27,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="@font/baumans"
         android:text="@string/menu_home"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/nin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
