--- a/main/res/layout/horizontal_scroll_item_layout.xml
+++ b/main/res/layout/horizontal_scroll_item_layout.xml
@@ -20,7 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/phone1" />
+        app:srcCompat="@mipmap/placeholder_small" />
 
     <TextView
         android:id="@+id/h_s_product_title"
