--- a/main/res/layout/sign_in_dialog.xml
+++ b/main/res/layout/sign_in_dialog.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/slider_background">
+    >
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_height="100dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +75,7 @@
         android:id="@+id/divider13"
         android:layout_width="409dp"
         android:layout_height="1dp"
-        android:background="#ECE8E8"
+        android:background="#BCBABA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/linearLayout6" />
@@ -85,7 +84,7 @@
         android:id="@+id/divider14"
         android:layout_width="1dp"
         android:layout_height="0dp"
-        android:background="#ECE8E8"
+        android:background="#BCBABA"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/linearLayout6"
