--- a/main/res/layout/strip_ad_layout.xml
+++ b/main/res/layout/strip_ad_layout.xml
@@ -17,5 +17,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/logoimg" />
+        app:srcCompat="@mipmap/placeholder_big" />
 </androidx.constraintlayout.widget.ConstraintLayout>
