--- a/main/res/layout/activity_add_address.xml
+++ b/main/res/layout/activity_add_address.xml
@@ -148,6 +148,7 @@
         android:layout_weight="1"
         android:background="@drawable/border_background"
         android:backgroundTint="@color/nin"
+        android:layout_marginTop="@dimen/dim_8dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp" />
 
