--- a/main/res/layout/activity_sign_in.xml
+++ b/main/res/layout/activity_sign_in.xml
@@ -112,6 +112,8 @@
         app:layout_constraintStart_toStartOf="@+id/signin_btn_img"
         app:layout_constraintTop_toTopOf="@+id/signin_btn_img" />
 
+
+
     <ImageView
         android:id="@+id/signin_back"
         android:layout_width="@dimen/size45dp"
@@ -162,7 +164,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="81dp"
         android:layout_height="16dp"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:indeterminate="true"
         app:layout_constraintBottom_toTopOf="@+id/signin_btn_img"
         app:layout_constraintEnd_toEndOf="@+id/signin_btn_img"
@@ -247,7 +249,7 @@
         android:textColor="@color/red1"
         android:textSize="@dimen/font_10"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/progressBar_signin"
+        app:layout_constraintBottom_toBottomOf="@id/progressBar_signin"
         app:layout_constraintEnd_toEndOf="@+id/sign_in_user_field_2"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/progressBar_signin"
