--- a/main/res/layout/fragment_my_cart.xml
+++ b/main/res/layout/fragment_my_cart.xml
@@ -23,6 +23,7 @@
         android:background="@color/background"
         android:elevation="@dimen/dim_8dp"
         android:orientation="horizontal"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -43,6 +44,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -56,8 +58,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Continue"
             android:backgroundTint="@color/nin"
+            android:text="Continue"
             android:textColor="@color/background"
             android:textSize="@dimen/size16sp"
             android:textStyle="bold" />
